--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,12 +7,14 @@
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
     </style>
+
     <style name="btnNumber">
         <item name="android:layout_weight">1</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">20dp</item>
+        <item name="android:onClick">numberAction</item>
 
 
     </style>
@@ -22,6 +24,7 @@
     <item name="android:layout_width">0dp</item>
     <item name="android:textColor">@color/orange</item>
     <item name="android:textSize">20dp</item>
+        <item name="android:onClick">numberOperation</item>
 
 
 </style>
